# price-monitoring-system

./: .env  app.py  product_data.json  pyproject.toml  save-to-file.md  save-to-file.py  scraper.py  update-database.py
backend/: app.py  fetchDatabase.py  product_data.json  pyproject.toml  scraper.py  update-database.py
frontend/: index.html  script.js
frontend/static/: script.js
frontend/templates/: index.html
