[tool.poetry]
name = "price-tracker"
version = "0.1.0"
description = ""
authors = ["AdamAbdulkareem <dmabdulkareem@gmail.com>"]
readme = "README.md"
packages = [{include = "price_tracker"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
python-dotenv = "^1.0.0"
mysqlclient = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
